# ACIT4510_statistical_learning_project

./: Mental_Health_Lifestyle_Project.ipynb  README.md  final report.docx  main.py  pyproject.toml  ~$nal report.docx
data/processed/: X_eval_encoded.npy  X_test_encoded.npy  X_test_xgb.npy  X_train_encoded.npy  X_train_xgb.npy  linear_models_comparison.csv  vif_results_encoded_features.csv  y_eval.csv  y_test.csv  y_test_preds_xgb.csv  y_train.csv
data/raw/: eval_df.csv  test_df.csv  train_df.csv
mlflow/689890885947025517/: meta.yaml
mlflow/689890885947025517/1342e9c157f143e0ac015fb6c1f64125/: meta.yaml
mlflow/689890885947025517/32fb7f1b7e2a4975a88aa4cd1691b7e8/: meta.yaml
mlflow/689890885947025517/38724f7f49b34309a965a76745b8c376/: meta.yaml
mlflow/689890885947025517/3aa0e4e5bb434029afe805bac0a8b752/: meta.yaml
mlflow/689890885947025517/49ad2ca022dc4c53972a289d644b232a/: meta.yaml
mlflow/689890885947025517/4f5908130891470fb2fc444c906cca34/: meta.yaml
mlflow/689890885947025517/600f0ef0a49c4d64abfecfc5fdb036a9/: meta.yaml
mlflow/689890885947025517/67f244cb006e46fb968a485d5d1bb587/: meta.yaml
mlflow/689890885947025517/73c748e6555841d9908978f88775f1af/: meta.yaml
mlflow/689890885947025517/a882d5e4c49b4ec2beb4baed23a48c1a/: meta.yaml
notebooks/: 00_data_import - Copy.txt  01_data_EDA - Copy.txt  01_data_EDA.ipynb  02_feature_engineering.ipynb  03_baselinemodel.ipynb  04_XGBoost.ipynb  05_linear_regression.ipynb  06_hyperparameter_tuning.ipynb  07_model_comparison.ipynb  08_SHAP_Explainability_for_XGBoost.ipynb
(+158 files in other folders)
